Fix vertical alignment issue with logo in appbar

--- a/src/scss/appbar.scss
+++ b/src/scss/appbar.scss
@@ -27,7 +27,6 @@
         > img{
           height: 25px;
           vertical-align: middle;
-          margin-top: -2px;
         }
         &.icon {
           text-transform: none;
